--- a/among us.html
+++ b/among us.html
@@ -10,7 +10,7 @@
     
 
 
-<h1 style="color:purple  " style="background-color: black ;" >among us</h1>
+<h1 style="color:purple ; background-color: black ;" >among us</h1>
 <div><img src="./egs-amongus-innersloth-s1-2560x1440-675403774.jpeg" alt="" width="200" height="200" srcset=""></div>
 <br>اما الباقي اسمهم "كروميت 'impostaere'هي عبارة عن مجموعة اشخاص الحد الادنى لهم 3اشخاص والحد الأعلى15شخص يكون بينهم ثلث العدد سفاحين  واسمهم
  <h2><a href="./download.htm">رابط موقع اللعبة الرسمي</a></h2>
