--- a/among us.html
+++ b/among us.html
@@ -18,9 +18,10 @@
 
  <h3>اسماء الشخصيات</h3>
  <ol>
-   <br> 1'impostaere'
-   <br> 2'crewmate'
-
+  <p>
+ <br> <li>'impostaere'</li> 
+ <br><li>2'crewmate'</li> 
+</p>
  </ol>
 
 
