--- a/shymaa.html
+++ b/shymaa.html
@@ -4,7 +4,7 @@
     
 <title>العابي المفضلة</title>
 
-
+<link rel="icon" type="image/png" href="img./lolly pop.png">
 </head>
 <body>
     
@@ -21,7 +21,7 @@
 
 
 
-
+<p></p>
 
 
 
